deploy: 104c92c3d1315b42bc0752b3c10f6a244fe51ed5

--- a/admin/overview.html
+++ b/admin/overview.html
@@ -35,10 +35,10 @@
             const path_to_root = "../";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "../searchindex-e484f973.js";
+            window.path_to_searchindex_js = "../searchindex-17171715.js";
         </script>
         <!-- Start loading toc.js asap -->
-        <script src="../toc-6612f5e2.js"></script>
+        <script src="../toc-31a8cf48.js"></script>
     </head>
     <body>
     <div id="mdbook-help-container">
@@ -181,7 +181,7 @@
                 <div id="mdbook-content" class="content">
                     <main>
                         <h1 id="admin-overview"><a class="header" href="#admin-overview">Admin Overview</a></h1>
-<p>The Yet Another Status Page admin panel is powered by Payload CMS and provides a comprehensive interface for managing your status page.</p>
+<p>The StatusDock admin panel is powered by your choice of Payload CMS or Strapi v5, providing a comprehensive interface for managing your status page.</p>
 <h2 id="dashboard"><a class="header" href="#dashboard">Dashboard</a></h2>
 <p>The dashboard shows at-a-glance metrics:</p>
 <ul>
