--- a/development/local-setup.html
+++ b/development/local-setup.html
@@ -35,10 +35,10 @@
             const path_to_root = "../";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "../searchindex-e484f973.js";
+            window.path_to_searchindex_js = "../searchindex-17171715.js";
         </script>
         <!-- Start loading toc.js asap -->
-        <script src="../toc-6612f5e2.js"></script>
+        <script src="../toc-31a8cf48.js"></script>
     </head>
     <body>
     <div id="mdbook-help-container">
@@ -188,7 +188,9 @@
 <li>PostgreSQL 15+ (or Docker)</li>
 <li>npm or pnpm</li>
 </ul>
-<h2 id="quick-start-with-docker"><a class="header" href="#quick-start-with-docker">Quick Start with Docker</a></h2>
+<h2 id="cms-backend-choice"><a class="header" href="#cms-backend-choice">CMS Backend Choice</a></h2>
+<p>StatusDock supports both Payload CMS (default) and Strapi v5. This guide covers Payload CMS setup. For Strapi development, see the <a href="../../strapi-setup.html">Strapi Setup Guide</a>.</p>
+<h2 id="quick-start-with-docker-payload-cms"><a class="header" href="#quick-start-with-docker-payload-cms">Quick Start with Docker (Payload CMS)</a></h2>
 <p>The easiest way to develop locally is using the included Docker Compose configuration.</p>
 <pre><code class="language-bash"># Clone the repository
 git clone https://github.com/Docker-Hunterpedia/StatusDock.git
