--- a/getting-started/configuration.html
+++ b/getting-started/configuration.html
@@ -35,10 +35,10 @@
             const path_to_root = "../";
             const default_light_theme = "light";
             const default_dark_theme = "navy";
-            window.path_to_searchindex_js = "../searchindex-e484f973.js";
+            window.path_to_searchindex_js = "../searchindex-17171715.js";
         </script>
         <!-- Start loading toc.js asap -->
-        <script src="../toc-6612f5e2.js"></script>
+        <script src="../toc-31a8cf48.js"></script>
     </head>
     <body>
     <div id="mdbook-help-container">
@@ -182,6 +182,34 @@
                     <main>
                         <h1 id="configuration"><a class="header" href="#configuration">Configuration</a></h1>
 <p>StatusDock is configured through environment variables and the admin panel.</p>
+<h2 id="cms-provider-selection"><a class="header" href="#cms-provider-selection">CMS Provider Selection</a></h2>
+<p>StatusDock supports two CMS backends: <strong>Payload CMS</strong> (default) and <strong>Strapi v5</strong>. See the <a href="cms-selection.html">CMS Selection Guide</a> for help choosing.</p>
+<div class="table-wrapper">
+<table>
+<thead>
+<tr><th>Variable</th><th>Description</th><th>Default</th></tr>
+</thead>
+<tbody>
+<tr><td><code>CMS_PROVIDER</code></td><td>CMS backend to use (<code>payload</code> or <code>strapi</code>)</td><td><code>payload</code></td></tr>
+</tbody>
+</table>
+</div>
+<h3 id="for-payload-cms-default"><a class="header" href="#for-payload-cms-default">For Payload CMS (Default)</a></h3>
+<p>No additional configuration needed beyond the required variables below.</p>
+<h3 id="for-strapi-v5"><a class="header" href="#for-strapi-v5">For Strapi v5</a></h3>
+<p>Additional variables required:</p>
+<div class="table-wrapper">
+<table>
+<thead>
+<tr><th>Variable</th><th>Description</th><th>Example</th></tr>
+</thead>
+<tbody>
+<tr><td><code>STRAPI_URL</code></td><td>Strapi API endpoint URL</td><td><code>http://localhost:1337</code></td></tr>
+<tr><td><code>STRAPI_API_TOKEN</code></td><td>Strapi API token with full access</td><td><code>your-strapi-api-token-here</code></td></tr>
+</tbody>
+</table>
+</div>
+<p>See the <a href="../../strapi-setup.html">Strapi Setup Guide</a> for complete setup instructions.</p>
 <h2 id="environment-variables"><a class="header" href="#environment-variables">Environment Variables</a></h2>
 <h3 id="required"><a class="header" href="#required">Required</a></h3>
 <div class="table-wrapper">
@@ -191,7 +219,7 @@
 </thead>
 <tbody>
 <tr><td><code>DATABASE_URI</code></td><td>PostgreSQL connection string</td><td><code>postgres://user:pass@host:5432/db</code></td></tr>
-<tr><td><code>PAYLOAD_SECRET</code></td><td>Secret key for encryption (min 32 chars) - <a href="https://payloadsecret.com/">Generate one</a></td><td><code>your-super-secret-key-here-32ch</code></td></tr>
+<tr><td><code>PAYLOAD_SECRET</code></td><td>Secret key for encryption (min 32 chars) - <a href="https://payloadsecret.com/">Generate one</a> - <strong>Required only for Payload CMS</strong></td><td><code>your-super-secret-key-here-32ch</code></td></tr>
 <tr><td><code>SERVER_URL</code></td><td>Public URL of your status page</td><td><code>https://status.example.com</code></td></tr>
 </tbody>
 </table>
